EKS_Special/6_integration/kubernetes/lb_dns/client.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: stage
spec:
  containers:
  - name: curl
    image: curlimages/curl:7.87.0
    resources:
      requests:
        cpu: 500m
        memory: 128Mi
      limits:
        cpu: 1000m
        memory: 256Mi
    command: ['sleep', '86400']
